<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_statistics"
            android:checked="true"
            android:icon="@drawable/ic_menu_statistics"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_calendar"
            android:checked="true"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/calendar"/>
        <item
            android:id="@+id/nav_configuration"
            android:checked="true"
            android:icon="@drawable/ic_menu_configuration"
            android:title="@string/configuration" />
        <item
            android:id="@+id/nav_log_out"
            android:checked="true"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout" />
    </group>

</menu>

