<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/degradado"

        tools:context="com.tfg.lauragc94.mytraining.LoginActivity">



        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/login_SMS"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="53dp"
            android:text="@string/login"
            android:fontFamily="@font/cute"
            android:textColor="@color/colorTrans"
            android:textAlignment="center"
            android:textSize="40sp" />


        <Button
            android:id="@+id/login_SMS"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="107dp"
            android:background="@color/colorWhite"
            android:onClick="onSMSLoginFlow"
            android:text="@string/bottom_sms"
            android:fontFamily="@font/regular"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/color_ss_dark"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="148dp"
            android:text="@string/app"
            android:fontFamily="@font/light"
            android:textSize="45sp"
            android:textColor="@color/colorWhite"/>

    </RelativeLayout>
</merge>